2008-07-25  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/main.py:
	use trac syntax, add filename revisions
	* flumotion/configure/configure.py:
	add branchName
	* flumotion/extern/exceptiondialog.py:
	add new api to fetch all involved filenames,
	refactor to avoid some duplication

2008-07-24  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/gtk/dialogs.py:
	Keep authors sorted by last name.

2008-07-24  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_wizard_save.py:
	* flumotion/wizard/consumptionsteps.py:
	Fix a typo in the bandwidth saving logic, add a test.

2008-07-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/scenario-wizard.glade:
	* flumotion/wizard/scenarios.py:
	  Rephrase the scenario page a little.

2008-07-24  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* po/ca.po:
	Translations updated.

2008-07-24  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/main.py:
	* flumotion/extern/Makefile.am:
	* flumotion/extern/exceptiondialog.py:
	Add an ExceptionDialog which is used to display an error message
	when an handled exception occurs. Hook it up with the
	gtk admin client.

2008-07-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/effects/volume/admin_gtk.py: check if the
	label is None before trying to call a method on it.

2008-07-24  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Add Jordi and myself in authors.

2008-07-24  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	Fix the behavior of the component list right-click context menu
	to keep current selection if done on a select component.

2008-07-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Add back kill component in context menu, fixes #1064

2008-07-23  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/gtk/componentlist.py (ComponentList.stateSet):